# Pholog

./: README.md  dune-project  profiling.txt  test
_build/: .db  .digest-db  log
code/: 12queenprog.txt  8queenprog.txt  graphcolourprofile.txt  njk  numgen.py  out.txt  res1.txt  res2.txt  res3.txt  res4.txt  res5.txt  tail recursion.ipynb
code/old_code/test/: dune  interpreterTest.ml  interpreterTest2.ml  interpreterTest4.ml  interpreterTest5.ml  useInterpreter1.ml  useInterpreter2.ml  useInterpreter3.ml  useInterpreter4.ml  useInterpreter5.ml
code/src/interpreter/test/: dune  interpreterTest7.ml  parserTest.ml  useInterpreter7.ml  useMachine1.ml  useParser.ml
diss/: diss.tex  documentation.tex  progress_report.tex  references.bib
src/: dune  endToEndTest.ml  main.ml  runFromFile.ml  writeToFile.ml
src/bcode/: 12queens  4queens-pho  ack-pho  reverse-pho
src/bench/: 12queens-gnu  4queens-gnu  4queens-gnu.pl  ack-swi.txt  demo.pl  graphcolour-gnu  graphcolour-pho.txt  graphcolour-swi.txt  hannoi-gnu.pl  iter-gnu  iter-pho.txt  quick-gnu  quick-gnu.pl  quick-pho.txt  quick-swi.txt  trec-test-gnu  trec-test-gnu.pl
src/bench/swi_executables/: .plexe  10queens.plexe  12queens.plexe  4queens.plexe  ack.plexe  graphcolour.plexe  trec-test.plexe
src/code_generation/: codeLoadStructure.ml  codeStructureInArg.ml  codeStructureInArg.mli  dune  genCode.ml  genFunctionTable.ml  genFunctionTable.mli  linearise.ml  linearise.mli
src/code_generation/test/: codeGenTest.ml
src/datatypes/: dt.ml
src/execute/: envCpStackOps.ml  execute.ml  initialise.ml  instructionImplementationsFunctor.ml  runProgram.ml  runtimeDataStructures.ml  stackImplementation.ml  unification.ml
src/execute/test/: executeTest.ml
src/interpreter/: dune
src/interpreter/prolog_lexer_parser/: lexer.mll  makefile  parseTree.ml  parser.mli
src/interpreter/test/: interpreterTest7.ml  parserTest.ml  useInterpreter7.ml  useMachine1.ml  useParser.ml
src/lexer_parser/: a.out  lexer.ml  lexer.mll  makefile  parseTree.cmi  parseTree.cmx  parseTree.ml  parser.cmi  parser.mly
src/run_project/: executeFromFile.ml  runall.ml  writeInstrToFile.ml
src/scripts/: OLDperfgraph-Copy1.ipynb  OLDtail recursion.ipynb  demo.sh  log  makespacetime.sh  mem_graph_swi  repeat.sh  run_me_gc.sh  scaling.ipynb  scaling.py  tempp  trec-log
src/scripts/.ipynb_checkpoints/: .ipynb-checkpoint  OLDtail recursion-checkpoint.ipynb  heatmap2-checkpoint.ipynb  perfgraph-RETAKEDATA-checkpoint.ipynb  perfgraph-checkpoint.ipynb  tail recursion-Copy1-checkpoint.ipynb
src/test_end_to_end/: combineTests.ml  dune
src/typecheck/: checkClause.ml  checkTypeEquivalence.ml  getDeclarations.ml  inferVariableTypes.ml  typeChecker.ml  unifyTypes.ml
src/typecheck/test/: dune  typecheckTest.ml
src/utils/: dune  flattenInstrForPrint.ml  logging.ml  utils.ml
(+282 files in other folders)
