(executable
  (name parserTest)
  (libraries prolog_lexer_parser oUnit)
  (modules parserTest)
)

(executable
  (name useParser)
  (libraries prolog_lexer_parser)
  (modules useParser)
)

(executable
  (name useInterpreter7)
  (libraries interpreter7)
  (modules useInterpreter7)
)


(executable
  (name interpreterTest7)
  (libraries interpreter7 oUnit)
  (modules interpreterTest7)
)
